--- a/package.json
+++ b/package.json
@@ -6,10 +6,17 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.3"
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.11",
+    "@types/axios": "^0.14.0",
+    "@types/react-dom": "^17.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
