--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.2.3",
     "react-dom": "^17.0.2",
+    "react-paginate": "^8.1.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
@@ -19,9 +22,11 @@
     "web-vitals": "^2.1.3"
   },
   "devDependencies": {
-    "@types/react": "^17.0.11",
     "@types/axios": "^0.14.0",
-    "@types/react-dom": "^17.0.8"
+    "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.8",
+    "mobx": "^6.5.0",
+    "mobx-react-lite": "^3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
