--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@antv/data-set": "^0.11.8",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/material": "^5.8.7",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
+    "bizcharts": "^4.1.19",
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.3",
@@ -26,6 +31,7 @@
     "@types/axios": "^0.14.0",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
+    "bx-tooltip": "^0.1.6",
     "mobx": "^6.5.0",
     "mobx-react-lite": "^3.4.0"
   },
