--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.24.0",
     "bizcharts": "^4.1.19",
     "bootstrap": "^5.1.3",
+    "prop-types": "15.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.3",
     "react-dom": "^17.0.2",
@@ -21,6 +22,8 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-select-search": "^3.0.1",
+    "react-stripe-checkout": "^2.6.3",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
