--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
     "bx-tooltip": "^0.1.6",
+    "dotenv": "^16.0.2",
     "mobx": "^6.5.0",
     "mobx-react-lite": "^3.4.0"
   },
