--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "sweetalert2": "^11.4.0",
-    "web-vitals": "^2.1.3"
+    "web-vitals": "^2.1.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
@@ -36,6 +37,7 @@
     "@types/react-dom": "^17.0.8",
     "bx-tooltip": "^0.1.6",
     "dotenv": "^16.0.2",
+    "file-saver": "^2.0.5",
     "mobx": "^6.5.0",
     "mobx-react-lite": "^3.4.0"
   },
