--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.24.0",
     "bizcharts": "^4.1.19",
     "bootstrap": "^5.1.3",
+    "moment": "^2.29.4",
     "prop-types": "15.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.3",
@@ -27,6 +28,7 @@
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "styled-components": "^5.3.6",
     "sweetalert2": "^11.4.0",
     "web-vitals": "^2.1.3",
     "xlsx": "^0.18.5"
