--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bizcharts": "^4.1.19",
     "bootstrap": "^5.1.3",
     "moment": "^2.29.4",
+    "multer": "^1.4.5-lts.1",
     "prop-types": "15.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.3",
@@ -23,7 +24,7 @@
     "react-paginate": "^8.1.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.1",
     "react-select-search": "^3.0.1",
     "react-stripe-checkout": "^2.6.3",
     "redux": "^4.1.2",
